--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
 	<!-- Top section -->
-	<div class="top fullscreen background parallax" id="top" style="background-image:url('http://ivizamedia.com/demo/onepage/images/background.jpg');" data-img-width="1920" 
+	<div class="top fullscreen background parallax" id="top" style="background-image:url('https://pbs.twimg.com/profile_banners/767035832507170816/1472333517/1500x500');" data-img-width="1920" 
 	data-img-height="1080" data-diff="250">
    		<div class="content-a">
    			<div class="overlay"></div>
