--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
    			<div class="overlay"></div>
        		<div class="content-b">
        			<div class="dark-line">
-	<img src="https://www.theahc.org.au/images/404.png" alt="404" style="width:300px;height:150px;">
-          <h1>Page Not Created</h1>
+	<h1> <img src="https://www.theahc.org.au/images/404.png" alt="404" style="width:300px;height:150px;">
+          <br> Page Not Created </h1>
 				</div>
 					<div class="arrows"></div>
 	       	</div>
