--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    	<meta name="viewport" content="width=device-width, initial-scale=1">
    	<meta name="description" content="">
 
-	<title>Minecraft OnePage website template</title>
+	<title>Radiant Factions Website</title>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -37,7 +37,7 @@
    			<div class="overlay"></div>
        		<div class="content-b">
        			<div class="dark-line">
-	<h1> <img src="https://www.theahc.org.au/images/404.png" alt="404" style="width:300px;height:150px;">
+	<h1> <img src="https://www.theahc.org.au/images/404.png" alt="404" style="width:300px;height:150px;display: block;margin: 0 auto;">
           <br> Page Not Created </h1>
 				</div>
 					<div class="arrows"></div>
