--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    	<meta name="viewport" content="width=device-width, initial-scale=1">
    	<meta name="description" content="">
 
-	<title>Minecraft OnePage website template</title>
+	<title>Radiant Factions</title>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -39,8 +39,8 @@
    			<div class="overlay"></div>
        		<div class="content-b">
        			<div class="dark-line">
-					<h1>Minecraft OnePage</h1>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					<h1>Radiant Factions</h1>
+					<p>A Minecraft Pocket Edition Server Network! | Factions IP: http://play.radiantfacs.net:19132</p>
 				</div>
 					<div class="arrows"></div>
 	       	</div>
