--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        		<div class="content-b">
        			<div class="dark-line">
 					<h1>Radiant Factions</h1>
-					<p>A Minecraft Pocket Edition Server Network! | Factions IP: http://play.radiantfacs.net:19132</p>
+					<p>A Minecraft Pocket Edition Server Network! | Factions IP: play.radiantfacs.net:19132</p>
 				</div>
 					<div class="arrows"></div>
 	       	</div>
@@ -66,8 +66,7 @@
         		<div id="navbar" class="navbar-collapse collapse">
  		        	<ul class="nav navbar-nav navbar-center">
         		    	<li><a href="#top">Home</a></li>
-            			<li><a href="#about">About</a></li>
-            			<li><a href="#vote">Vote</a></li>
+					<li><a href="#about">About</a></li>
             			<li><a href="#shop">Shop</a></li>
             			<li><a href="#team">The team</a></li>
             			<li><a href="#servers">Servers</a></li>
@@ -80,73 +79,32 @@
 	<!-- About section -->
 	<section class="about" id="about">
 		<div class="container">
-			<h3>We are minecraft OnePage</h3>
+			<h3>Welcome to RadiantFactions</h3>
 			<div class="divider">
 				<div class="hr">
 					<div class="hr-dot"></div>
 				</div>
 			</div>
-			<h4>Join us on mc.onepage.com</h4>
+			<h4>Play at play.radiantfacs.net on MCPE 0.16!</h4>
 			<div class="col-md-4 about-item">
 				<i class="fa fa-cog fa-2x"></i>
 				<div class="col-content">
-					<h5>Custom minigames</h5>
-					<p>We provide you the best game-experience with our home made custom minigames and great builds. Join us to experience the feeling and have countless hours of fun!</p>
+					<h5>Constant Updates</h5>
+					<p>We provide you with the best game experience by constantly fixing bugs and adding new features! Join us to experience the feeling and have countless hours of fun!</p>
 				</div>
 			</div>
 			<div class="col-md-4 about-item">
 				<i class="fa fa-users fa-2x"></i>
 				<div class="col-content">
 					<h5>Great community</h5>
-					<p>Minecraft OnePage has a friendly community with both new and experienced players. The community will help you out if you’re having troubles and the staff is always ready to help you out as well!</p>
+					<p>Radiant Factions has a friendly community with plenty of players who have lots of experience! The community will help you out if you’re having troubles and the staff is always ready to give you aid in times of need!</p>
 				</div>
 			</div>
 			<div class="col-md-4 about-item">
 				<i class="fa fa-hdd-o fa-2x"></i>
 				<div class="col-content">
-					<h5>Best servers</h5>
-					<p>Our servers are running on the most powerful machines, to give you a smooth gameplay without lag and downtime.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- Vote section -->
-	<section class="dark vote" id="vote">
-		<div class="container">
-			<h3>Vote for us!</h3>
-			<div class="divider">
-				<div class="hr hr-dark">
-					<div class="hr-dot"></div>
-				</div>
-			</div>
-			<div class="col-centered">
-				<div class="col-md-8">
-					<p>Vote for OnePage and get one coin for every vote. You can buy awesome stuff with the coins, so be sure to vote on all the links below. The monthly top voter also gets a <span class="colored">$50 gift card</span> to spend in our buycraft shop!</p>
-				</div>
-			</div>
-			<div class="vote-buttons">
-				<div class="col-md-4">
-					<h5 class="small">minecraftservers.org</h5>
-					<a href="#" class="button button-dark">
-						<span class="button-text">Vote</span>
-						<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
-					</a>
-				</a>
-				</div>
-				<div class="col-md-4">
-					<h5 class="small">minecraft-server-list.com</h5>
-					<a href="#" class="button button-dark">
-						<span class="button-text">Vote</span>
-						<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
-					</a>
-				</div>
-				<div class="col-md-4">
-					<h5 class="small">minecraft-server-list.com</h5>
-					<a href="#" class="button button-dark">
-						<span class="button-text">Vote</span>
-						<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
-					</a>
+					<h5>Other</h5>
+					<p>Our custom builds provide you with an experience that you won't see anywhere else in MCPE! In addition, our server is hosted on an amazing machine, allowing for uninterupted gameplay and 99% uptime!</p>
 				</div>
 			</div>
 		</div>
@@ -332,7 +290,6 @@
  		    <ul>
         	  	<li><a href="#top">Home</a></li>
             	<li><a href="#about">About</a></li>
-            	<li><a href="#vote">Vote</a></li>
             	<li><a href="#shop">Shop</a></li>
             	<li><a href="#team">The team</a></li>
             	<li><a href="#servers">Servers</a></li>
