--- a/index.html
+++ b/index.html
@@ -110,33 +110,15 @@
 		</div>
 	</section>
 
-	<!-- Image section -->
-	<section class="image-section" id="image-section">
-		<div class="container">
-			<h3>Fully responsive</h3>
-			<div class="divider">
-				<div class="hr">
-					<div class="hr-dot"></div>
-				</div>
-			</div>
-			<div class="col-centered">
-				<div class="col-md-8">
-					<p>The Minecraft OnePage template is a clean and minimalistic one page website template. Minecraft OnePage is fully responsive so it also fits perfect on iPads, tablets and smartphones.</p>
-				</div>
-			</div>
-			<img src="images/responsive-mockup.jpg" alt="responsive mockup">
-		</div>
-	</section>
-
 	<!-- Action bar -->
 	<section class="action-bar dark" id="section-bar-1">
 		<div class="container">
 			<div class="col-md-8">
-				<h3 class="small dark">We promise that you’ll like it, join us now!</h3>
+				<h3 class="small dark">We're sure that you will like it! Join Now!</h3>
 			</div>
 			<div class="col-md-4">
-				<a href="http://ivizamedia.com/shop/downloads/minecraft-onepage/" class="button button-dark">
-					<span class="button-text">mc.onepage.com</span>
+				<a href="#top" class="button button-dark" onmousedown="return false;">
+					<span class="button-text">play.radiantfacs.net:19132</span>
 					<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
 				</a>
 			</div>
