--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="col-md-4">
 				<a href="#top" class="button button-dark" onmousedown="return false;">
-					<span class="button-text">play.radiantfacs.net:19132</span>
+					<span class="button-text">play.radiantfacs.net</span>
 					<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
 				</a>
 			</div>
