--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 			</div>
 			<div class="col-md-4">
 					<span class="button-text">play.radiantfacs.net</span>
+					<span class="button-icon"></span>
 			</div>
 		</div>
 	</section>
