--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			</div>
 			<h4>Some of the extra features we offer</h4>
 			<div class="col-sm-6">
-				<img src="images/buycraft.jpg" alt="visit buycraft">
+				<img src="https://github.com/remotevase/RadiantFSite/blob/gh-pages/images/buycraft.jpg?raw=true" alt="Radiant Buycraft">
 			</div>
 			<div class="col-sm-6">
 				<div class="divider divider-left">
