Update shop section

--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 	<!-- Shop section -->
 	<section class="shop" id="shop">
 		<div class="container">
-			<h3>Take a look on our buycraft page for extra features</h3>
+			<h3>Take a look at our buycraft page for our Shop!</h3>
 			<div class="divider">
 				<div class="hr">
 					<div class="hr-dot"></div>
 				</div>
 			</div>
-			<h4>Some of the extra features we offer</h4>
+			<h4>Radiant Factions Shop</h4>
 			<div class="col-sm-6">
 				<img src="https://github.com/remotevase/RadiantFSite/blob/gh-pages/images/buycraft.jpg?raw=true" alt="Radiant Buycraft">
 			</div>
@@ -142,15 +142,15 @@
 						<div class="hr-dot"></div>
 					</div>
 				</div>
-				<p>Do you want to show some love for our hard work? You can do that by donating to the server. In return we give you great ranks, extra permissions or ingame items. How cool is that?</p>
-				<p>Visit our buycraft to see the perks, items and features you get when you donate, and their prices. We reall appriciate your help.</p>
+				<p>Do you want to show some love for all of our hard work? You can do that by donating to the server! This can be in regular money donations, or in the form of buying ranks!</p>
+				<p>When you visit our buycraft page, you will see a main message on our home page, along with a faction ranks page and a donation page! The top donator of the month gets special in-game perks!</p>
 				<div class="divider divider-left">
 					<div class="hr">
 						<div class="hr-dot"></div>
 					</div>
 				</div>
-				<a href="http://ivizamedia.com/shop/downloads/minecraft-onepage/" class="button">
-					<span class="button-text">Buycraft</span>
+				<a href="http://radiantnet.buycraft.net/" class="button">
+					<span class="button-text">Radiant Factions Buycraft</span>
 					<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
 				</a>
 			</div>
