--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<form method="get" action="http://http://radiantnet.buycraft.net//checkout/packages">
+<form method="get" action="http://http://radiantnet.buycraft.net/checkout/packages">
 <input type="hidden" name="direct" value="true">
 <input type="hidden" name="action" value="add">
 <input type="hidden" name="package" value="SuperNova">
