--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 	<!-- Footer -->
 	<footer class="dark">
 		<div class="container">
-			<span class="copyright">Design by <a href="http://ivizamedia.com">Iviza Media</a></span>
+			<span class="copyright">Design by masteremotevase</span>
  		    <ul>
         	  	<li><a href="#top">Home</a></li>
             	<li><a href="#about">About</a></li>
