--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 				<h3 class="small dark">Do you like what you see? Download me, it’s free!</h3>
 			</div>
 			<div class="col-md-4">
-				<a href="http://ivizamedia.com/shop/downloads/minecraft-onepage/" class="button button-dark">
+				<a href="#" class="button button-dark">
 					<span class="button-text">Download</span>
 					<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
 				</a>
