--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	</section>
 
 	<!-- Number counter section -->
-	<section class="not-fullscreen background parallax counter" id="counter" style="background-image:url('images/counter-bg.jpg');" data-img-width="1600" data-img-height="1064" data-diff="500">
+	<section class="not-fullscreen background parallax counter" id="counter" style="background-image:url('https://pbs.twimg.com/profile_banners/767035832507170816/1472333517');" data-img-width="1600" data-img-height="1064" data-diff="500">
 	    <div class="content-a">
 	        <div class="content-b">
 	    	<div class="overlay"></div>
