--- a/index.html
+++ b/index.html
@@ -164,20 +164,20 @@
 	    	<div class="overlay"></div>
 	        	<div class="container">
 		        	<div class="col-xs-3">
-		        		<span class="counter-number white">136</span>
+		        		<span class="counter-number white">5</span>
 		        		<span class="white counter-text">players online average</span>
 		        	</div>
 		        	<div class="col-xs-3">
-		        		<span class="counter-number white">48160</span>
+		        		<span class="counter-number white">1000</span>
 		        		<span class="white counter-text">players joined in total</span>
 		        	</div>
 		        	<div class="col-xs-3">
-		        		<span class="counter-number white">2</span>
-		        		<span class="white counter-text">years online</span>
+		        		<span class="counter-number white">Less Than 1</span>
+		        		<span class="white counter-text">Year Online</span>
 		        	</div>
 		        	<div class="col-xs-3">
-		        		<span class="counter-number white">19</span>
-		        		<span class="white counter-text">great staff members</span>
+		        		<span class="counter-number white">9</span>
+		        		<span class="white counter-text">Amazing Staff Members</span>
 		        	</div>
 		        </div>
 	        </div>
