--- a/index.html
+++ b/index.html
@@ -187,25 +187,55 @@
 	<!-- Team section -->
 	<section class="team" id="team">
 		<div class="container">
-			<h3>The team behind Minecraft OnePage</h3>
+			<h3>The Devs behind Radiant Factions</h3>
 			<div class="divider">
 				<div class="hr">
 					<div class="hr-dot"></div>
 				</div>
 			</div>
 			<div class="col-md-4">
+				<img src="https://pbs.twimg.com/profile_images/791058707492769792/EKK78Fg0_normal.jpg" alt="jockey">
+				<h4 class="bold">TheJockeyMiner</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="https://pbs.twimg.com/profile_images/765272011308429314/RI8y5E3M_normal.jpg" alt="LegendMC">
+				<h4 class="bold">LegendMC</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="https://pbs.twimg.com/profile_images/788768572373807104/rqLmx81L_normal.jpg" alt="Shallow">
+				<h4 class="bold">Shallowgam3r</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="https://pbs.twimg.com/profile_images/788028665992847360/U_W3rZj__normal.jpg" alt="Eons">
+				<h4 class="bold">༻ིི丶ξΩΠ$</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="images/notch.jpg" alt="notch">
+				<h4 class="bold">masteremotevase aka remote_vase</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="images/notch.jpg" alt="notch">
+				<h4 class="bold">JohnathanFTW2</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="images/notch.jpg" alt="notch">
+				<h4 class="bold">TheAppleGamerYT</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="images/notch.jpg" alt="notch">
+				<h4 class="bold">Jason Donaldson</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
 				<img src="images/notch.jpg" alt="notch">
 				<h4 class="bold">Notch</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
-			</div>
-			<div class="col-md-4">
-				<img src="images/steve.jpg" alt="steve">
-				<h4 class="bold">Steve</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
-			</div>
-			<div class="col-md-4">
-				<img src="images/enderman.jpg" alt="enderman">
-				<h4 class="bold">Mr. Enderman</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 		</div>
