--- a/index.html
+++ b/index.html
@@ -214,28 +214,28 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="images/notch.jpg" alt="notch">
+				<img src="https://pbs.twimg.com/profile_images/788119079576043520/cBgNcFkv_normal.jpg" alt="masteremotevase">
 				<h4 class="bold">masteremotevase aka remote_vase</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="images/notch.jpg" alt="notch">
+				<img src="https://pbs.twimg.com/profile_images/781309858448420864/OgbjFqAa_normal.jpg" alt="Jon">
 				<h4 class="bold">JohnathanFTW2</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="images/notch.jpg" alt="notch">
+				<img src="https://pbs.twimg.com/profile_images/785791696239992832/XhsraYTn_normal.jpg" alt="Apple">
 				<h4 class="bold">TheAppleGamerYT</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="images/notch.jpg" alt="notch">
+				<img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_normal.png" alt="Bulldog">
 				<h4 class="bold">Jason Donaldson</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="images/notch.jpg" alt="notch">
-				<h4 class="bold">Notch</h4>
+				<img src="https://pbs.twimg.com/profile_images/781348241455493120/PNKFLYx5_normal.jpg" alt="Kora">
+				<h4 class="bold">Kora</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 		</div>
