--- a/index.html
+++ b/index.html
@@ -168,15 +168,15 @@
 		        		<span class="white counter-text">players online average</span>
 		        	</div>
 		        	<div class="col-xs-3">
-		        		<span class="counter-number white">1000</span>
-		        		<span class="white counter-text">players joined in total</span>
+		        		<span class="counter-number white">1012</span>
+		        		<span class="white counter-text">Unique Players who have joined</span>
 		        	</div>
 		        	<div class="col-xs-3">
 		        		<span class="counter-number white">Less Than 1</span>
 		        		<span class="white counter-text">Year Online</span>
 		        	</div>
 		        	<div class="col-xs-3">
-		        		<span class="counter-number white">9</span>
+		        		<span class="counter-number white">10</span>
 		        		<span class="white counter-text">Amazing Staff Members</span>
 		        	</div>
 		        </div>
@@ -196,7 +196,7 @@
 			<div class="col-md-4">
 				<img src="https://pbs.twimg.com/profile_images/791058707492769792/EKK78Fg0_normal.jpg" alt="jockey">
 				<h4 class="bold">TheJockeyMiner</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+				<p></p>
 			</div>
 			<div class="col-md-4">
 				<img src="https://pbs.twimg.com/profile_images/765272011308429314/RI8y5E3M_normal.jpg" alt="LegendMC">
@@ -236,6 +236,11 @@
 			<div class="col-md-4">
 				<img src="https://pbs.twimg.com/profile_images/781348241455493120/PNKFLYx5_normal.jpg" alt="Kora">
 				<h4 class="bold">Kora</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
+			</div>
+			<div class="col-md-4">
+				<img src="https://pbs.twimg.com/profile_images/792578203961454592/13ko2zZa_normal.jpg" alt="Static">
+				<h4 class="bold">Static</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 		</div>
