--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/791058707492769792/EKK78Fg0_normal.jpg" alt="jockey">
+				<img src="https://pbs.twimg.com/profile_images/792928934123937792/ILdFqqYw_normal.jpg" alt="jockey">
 				<h4 class="bold">TheJockeyMiner</h4>
-				<p></p>
+				<p>Owner of @radiantnetmcpe and Major Server Dev. Always makes the final decisions, and is the boss of all devs. Follow his rules!!</p>
 			</div>
 			<div class="col-md-4">
 				<img src="https://pbs.twimg.com/profile_images/765272011308429314/RI8y5E3M_normal.jpg" alt="LegendMC">
