--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		        		<span class="white counter-text">Year Online</span>
 		        	</div>
 		        	<div class="col-xs-3">
-		        		<span class="counter-number white">10</span>
+		        		<span class="counter-number white">9</span>
 		        		<span class="white counter-text">Amazing Staff Members</span>
 		        	</div>
 		        </div>
@@ -194,52 +194,47 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/792928934123937792/ILdFqqYw_normal.jpg" alt="jockey">
+				<img src="/images/jock.jpg" alt="jockey">
 				<h4 class="bold">TheJockeyMiner</h4>
 				<p>Owner of @radiantnetmcpe and Major Server Dev. Always makes the final decisions, and is the boss of all devs. Follow his rules!!</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/765272011308429314/RI8y5E3M_normal.jpg" alt="LegendMC">
+				<img src="/images/legend.jpg" alt="LegendMC">
 				<h4 class="bold">LegendMC</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/788768572373807104/rqLmx81L_normal.jpg" alt="Shallow">
+				<img src="/images/shallow.jpg" alt="Shallow">
 				<h4 class="bold">Shallowgam3r</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/788028665992847360/U_W3rZj__normal.jpg" alt="Eons">
+				<img src="/images/eons.jpg" alt="Eons">
 				<h4 class="bold">༻ིི丶ξΩΠ$</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/788119079576043520/cBgNcFkv_normal.jpg" alt="masteremotevase">
+				<img src="/images/remotevase.jpg" alt="masteremotevase">
 				<h4 class="bold">masteremotevase aka remote_vase</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/781309858448420864/OgbjFqAa_normal.jpg" alt="Jon">
+				<img src="/images/jon.jpg" alt="Jon">
 				<h4 class="bold">JohnathanFTW2</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/792578203961454592/13ko2zZa_normal.jpg" alt="Static">
-				<h4 class="bold">Static</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
-			</div>
-			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/785791696239992832/XhsraYTn_normal.jpg" alt="Apple">
+				<img src="/images/apple.jpg" alt="Apple">
 				<h4 class="bold">TheAppleGamerYT</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_normal.png" alt="Bulldog">
+				<img src="/images/jason.png" alt="Bulldog">
 				<h4 class="bold">Jason Donaldson</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="https://pbs.twimg.com/profile_images/781348241455493120/PNKFLYx5_normal.jpg" alt="Kora">
+				<img src="/images/kora.jpg" alt="Kora">
 				<h4 class="bold">Kora</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu aliquet dui, ultrices faucibus nisi. Phasellus auctor, odio vel viverra iaculis, nulla urna gravida eros, in cursus lacus elit vitae lacus. Proin ut metus nec tellus blandit ullamcorper quis at.</p>
 			</div>
