--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
 	<section class="action-bar dark" id="section-bar-2">
 		<div class="container">
 			<div class="col-md-8">
-				<h3 class="small dark">Do you like what you see? Download me, it’s free!</h3>
+				<h3 class="small dark">Wanna join? Give us a try! We're sure that you'll like it!</h3>
 			</div>
 			<div class="col-md-4">
-				<a href="#" class="button button-dark">
-					<span class="button-text">Download</span>
+				<a href="/" class="button button-dark">
+					<span class="button-text">play.radiantfacs.net</span>
 					<span class="button-icon"><i class="fa fa-arrow-right"></i></span>
 				</a>
 			</div>
