OMG THE WEBSITE CAN PLAY YOUTUBE SONG ON VISIT!

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 	       	</div>
    		</div>
    	</div>
-
+<!-- Play a youtube song on visiting the website -->
+	<embed height="0" width="0" 
+  src="http://youtube.googleapis.com/v/nrRf2XsMArg&autoplay=1&loop=1" />
    	<!-- Navigation -->
    	<div class="nav-content">
     	<nav class="navbar navbar-static-top" role="navigation">
