--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 	       	</div>
    		</div>
    	</div>
-<!-- Play a youtube song on visiting the website -->
-	<embed height="0" width="0" 
-  src="http://youtube.googleapis.com/v/nrRf2XsMArg&autoplay=1&loop=1" />
+<!-- Play a song on visiting the website -->
+	<source src="Audio.mp3" type="audio/mpeg">
    	<!-- Navigation -->
    	<div class="nav-content">
     	<nav class="navbar navbar-static-top" role="navigation">
