--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    		</div>
    	</div>
 <!-- Play a song on visiting the website -->
-	<source src="Audio.mp3" type="audio/mpeg">
+	<source src="https://remotevase.github.io/RadiantFSite/Audio.mp3" type="audio/mpeg">
    	<!-- Navigation -->
    	<div class="nav-content">
     	<nav class="navbar navbar-static-top" role="navigation">
