--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
    		</div>
    	</div>
 <!-- Play a song on visiting the website -->
+	
+<audio controls autoplay>
 	<source src="https://remotevase.github.io/RadiantFSite/Audio.mp3" type="audio/mpeg">
+</audio>
    	<!-- Navigation -->
    	<div class="nav-content">
     	<nav class="navbar navbar-static-top" role="navigation">
