--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    	<meta name="viewport" content="width=device-width, initial-scale=1">
    	<meta name="description" content="">
 
-	<title>Radiant Factions</title>
+	<title>Radiant Factions (Now renamed to VastlandsMC)</title>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
